tests/org.eclipse.php.core.tests/workspace/errors/php54/testUseStatementUsage04.pdtt
--TEST--
Test unused use statement
--FILE--
<?php
namespace name\ns1;

use name\ns2;
use name\ns2\Foo;

class Foo3 {
    use Foo, ns2\Foo;

}

namespace name\ns2;

trait Foo {
}
--EXPECT--